feature
- update logic and code to module and test something for lib